[gd_scene load_steps=17 format=2]

[ext_resource path="res://falling_writer/assets/file_upload.svg" type="Texture" id=1]
[ext_resource path="res://falling_writer/assets/sounds/typing/typing_1.wav" type="AudioStream" id=2]
[ext_resource path="res://falling_writer/components/mouse.tscn" type="PackedScene" id=3]
[ext_resource path="res://falling_writer/assets/new.svg" type="Texture" id=4]
[ext_resource path="res://falling_writer/assets/light.png" type="Texture" id=7]
[ext_resource path="res://falling_writer/assets/plus.svg" type="Texture" id=9]
[ext_resource path="res://falling_writer/assets/minus.svg" type="Texture" id=10]
[ext_resource path="res://falling_writer/scripts/falling_writer.gd" type="Script" id=11]
[ext_resource path="res://falling_writer/scripts/node_2d.gd" type="Script" id=12]
[ext_resource path="res://falling_writer/components/text_edit_button.tscn" type="PackedScene" id=13]
[ext_resource path="res://falling_writer/components/splash_screen.tscn" type="PackedScene" id=15]
[ext_resource path="res://falling_writer/assets/save.svg" type="Texture" id=16]
[ext_resource path="res://falling_writer/themes/dark.tres" type="Theme" id=17]
[ext_resource path="res://falling_writer/assets/cog.png" type="Texture" id=18]
[ext_resource path="res://falling_writer/components/settings_screen.tscn" type="PackedScene" id=19]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 512, 10 )

[node name="FallingWriter" type="Node"]
script = ExtResource( 11 )

[node name="Behind" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 370, 370 )
mouse_filter = 2
theme = ExtResource( 17 )

[node name="BG" type="ColorRect" parent="Behind"]
light_mask = 2
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.164706, 0.176471, 0.203922, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="Behind"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MarginContainer" type="MarginContainer" parent="Behind/VBoxContainer"]
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Behind/VBoxContainer/MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 1004.0
margin_bottom = 580.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 15

[node name="TextEdit" type="TextEdit" parent="Behind/VBoxContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
light_mask = 2
margin_right = 984.0
margin_bottom = 515.0
size_flags_horizontal = 3
size_flags_vertical = 3
wrap_enabled = true

[node name="HBoxContainer" type="HBoxContainer" parent="Behind/VBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 530.0
margin_right = 984.0
margin_bottom = 560.0

[node name="IncreaseFontSize" parent="Behind/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 13 )]
_icon_img_path = ExtResource( 9 )

[node name="DecreaseFontSize" parent="Behind/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 13 )]
margin_left = 34.0
margin_right = 64.0
_type = 1
_icon_img_path = ExtResource( 10 )

[node name="New" parent="Behind/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 13 )]
margin_left = 68.0
margin_right = 98.0
_type = 2
_icon_img_path = ExtResource( 4 )

[node name="Save" parent="Behind/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 13 )]
margin_left = 102.0
margin_right = 132.0
_type = 3
_icon_img_path = ExtResource( 16 )

[node name="Load" parent="Behind/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 13 )]
margin_left = 136.0
margin_right = 166.0
_type = 4
_icon_img_path = ExtResource( 1 )

[node name="Settings" parent="Behind/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 13 )]
margin_left = 170.0
margin_right = 200.0
_type = 5
_icon_img_path = ExtResource( 18 )

[node name="WordCount" type="ColorRect" parent="Behind/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
light_mask = 2
margin_left = 204.0
margin_right = 264.0
margin_bottom = 30.0
rect_min_size = Vector2( 60, 0 )
hint_tooltip = "Word Count"
color = Color( 0.137255, 0.145098, 0.168627, 1 )

[node name="Label" type="Label" parent="Behind/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/WordCount"]
margin_right = 60.0
margin_bottom = 29.0
size_flags_vertical = 1
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CharCount" type="ColorRect" parent="Behind/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
light_mask = 2
margin_left = 268.0
margin_right = 328.0
margin_bottom = 30.0
rect_min_size = Vector2( 60, 0 )
hint_tooltip = "Word Count"
color = Color( 0.137255, 0.145098, 0.168627, 1 )

[node name="Label" type="Label" parent="Behind/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/CharCount"]
margin_right = 60.0
margin_bottom = 29.0
size_flags_vertical = 1
text = "0"
align = 1
valign = 1

[node name="Node2D" type="Node2D" parent="."]
unique_name_in_owner = true
script = ExtResource( 12 )

[node name="WindowFloor" type="StaticBody2D" parent="Node2D"]
position = Vector2( 512, 610 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/WindowFloor"]
shape = SubResource( 1 )

[node name="Sun" type="Light2D" parent="Node2D"]
light_mask = 2
position = Vector2( 352, -725 )
scale = Vector2( 3.58008, 3.58008 )
texture = ExtResource( 7 )
range_item_cull_mask = 2
shadow_enabled = true
shadow_item_cull_mask = 2

[node name="Mouse" parent="Node2D" instance=ExtResource( 3 )]

[node name="Infont" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = ExtResource( 17 )

[node name="SettingsScreen" parent="Infont" instance=ExtResource( 19 )]
unique_name_in_owner = true

[node name="FileDialog" type="FileDialog" parent="Infont"]
unique_name_in_owner = true
margin_left = 20.0
margin_top = 60.0
margin_right = 1004.0
margin_bottom = 580.0
rect_min_size = Vector2( 150, 52.5 )
access = 2
filters = PoolStringArray( "*.txt" )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Infont"]
unique_name_in_owner = true
stream = ExtResource( 2 )

[node name="SplashScreen" parent="Infont" instance=ExtResource( 15 )]

[connection signal="gui_input" from="Behind/VBoxContainer/MarginContainer/VBoxContainer/TextEdit" to="." method="_on_TextEdit_gui_input"]
[connection signal="file_selected" from="Infont/FileDialog" to="Behind/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/Save" method="_on_FileDialog_file_selected"]
[connection signal="file_selected" from="Infont/FileDialog" to="Behind/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/Load" method="_on_FileDialog_file_selected"]
